# posSystem

./: .clang-format  .gitignore  app  lefthook.yml  test.cpp
src/: main.cpp  pos_system  test
src/db/: auth_repository.cpp  auth_repository.h  database.cpp  database.h  product_sales_repository.cpp  product_sales_repository.h  user.db
src/models/: product.h  sale.h  sale_item.h
src/output/: main
src/output/main.dSYM/Contents/Resources/DWARF/: main
src/output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/repositories/: product_repositories.cpp  product_repository.h  sale_repository.cpp  sale_repository.h
src/services/: auth.cpp  auth.h  menu.cpp  menu.h  product_service.cpp  product_service.h  sale_service.cpp
src/ui/: Dashboard_ui.h  Owner_ui.cpp  auth_ui.cpp  auth_ui.h
tests/: CMakeLists.txt
